--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 		<dependency>
 			<groupId>com.stripe</groupId>
 			<artifactId>stripe-java</artifactId>
-			<version>28.2.0</version>
+			<version>24.19.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.api-client</groupId>
@@ -122,6 +122,11 @@
 			<groupId>com.google.firebase</groupId>
 			<artifactId>firebase-admin</artifactId>
 			<version>9.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
 		</dependency>
 	</dependencies>
 
