--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.username=rikuganeko
 spring.datasource.password=Riku1204
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.sql.init.mode=never
