Update config comment to trigger rebuild

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 # ========================================
 # Railway Production Configuration
+# Updated: 2025-11-18
 # ========================================
 
 # Application Settings
