--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ["maven", "jdk21"]
 cmds = ["mvn clean package -DskipTests"]
 
 [start]
-cmd = "java -Dspring.profiles.active=prod -Dserver.port=$PORT -jar target/demo_wave-0.0.1-SNAPSHOT.jar"
+cmd = "java -Xmx512m -Xms256m -XX:MaxMetaspaceSize=128m -Dspring.profiles.active=prod -Dserver.port=$PORT -jar target/demo_wave-0.0.1-SNAPSHOT.jar"
