--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,14 @@
 spring.application.name=demo_wave
 server.port=${PORT:8080}
 
+# Memory Optimization - Tomcat Thread Pool
+server.tomcat.threads.max=50
+server.tomcat.threads.min-spare=5
+server.tomcat.accept-count=50
+
+# Lazy Initialization (reduces startup memory)
+spring.main.lazy-initialization=true
+
 # Character Encoding
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
